--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,35 +4,13 @@ html, body{
     width: 100%;
     height: 100%;
 }
-footer {
-    background-color: white;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+.home{
+    margin-top: 0;
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    box-sizing: border-box;
-    padding: 0 20px;
-    font-family: "Rubik", sans-serif;
-    font-size: 2vmin;
+    height: 70%;
+    background-image: url("../images/texture.jpg");
+    background-size: cover;
 }
-footer div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-.footer-contact{
-    padding: 10px;
-}
-footer p {
-    margin: 0;
-}
-.footer-links{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-footer a {
-    padding: 10px ;
+.home p{
+    font-family:"Fira Code", monospace;
 }
