--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,7 @@ header{
     height: 105px;
 }
 nav a{
-    font-family: rubik;
+    font-family: "Rubik", sans-serif;
     font-size:32px;
     font-weight: bold;
     color: #000;
