--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ header{
     height: 105px;
 }
 nav a{
-    font-family: "Rubik", sans-serif;
+    font-family: rubik;
     font-size:32px;
     font-weight: bold;
     color: #000;
@@ -30,6 +30,29 @@ nav a{
         display: flex;
         flex-direction: column;
         font-size: 24px;
+    }
+}
+.home{
+    width: 100%;
+    height: 60%;
+    margin-top: 30px;
+    background-image: url("../images/texture.jpg");
+    background-size: cover;
+    padding: 40px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home p{
+    font-family:"Fira Code", monospace;
+    font-size: 64px;
+    width: 70%;
+}
+@media screen and (max-width:900px){
+    .home p{
+        font-size:48px;
+        width: 90%;
     }
 }
 footer {
