--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,35 @@ nav a{
         width: 90%;
     }
 }
+.contact{
+    margin-top:30px;
+    height: 70%;
+    background-image: url("../images/texture.jpg");
+    background-size: cover;
+    padding: 0 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.contact img{
+    width: 400px;
+    margin-bottom: 20px;
+}
+.contact p{
+    font-family: 'Fira Code', monospace;
+    font-size: 1rem;
+    margin: 0;
+}
+@media screen and (max-width:900px){
+    .contact{
+        align-items: center;
+        padding: 0;
+        text-align: right;
+    }
+    .contact img{
+        width: 300px;
+    }
+}
 footer {
     background-color: white;
     position: absolute;
