--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ header{
     height: 105px;
 }
 nav a{
-    font-family: rubik;
+    font-family: "Rubik", sans-serif;
     font-size:32px;
     font-weight: bold;
     color: #000;
@@ -43,7 +43,6 @@ nav a{
     justify-content: center;
     align-items: center;
 }
-
 .home p{
     font-family:"Fira Code", monospace;
     font-size: 64px;
@@ -54,6 +53,40 @@ nav a{
         font-size:48px;
         width: 90%;
     }
+}
+.menu{
+    background-image: url("../images/texture.jpg");
+    background-size: cover;
+    font-family: 'Fira Code', monospace;
+}
+.menu h2, h1 {
+    font-weight: 400;
+}
+.menu h1 {
+    margin: 0 auto;
+    padding-top: 40px;
+    text-align: center;
+}
+.card-wrapper{
+    margin: 0 auto;
+    padding: 40px 20px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+}
+.recipe-card{
+    padding: 20px;
+    width: 350px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: #FDFF8A;
+    box-shadow: 4px 8px 4px #00000040;
+}
+.recipe-card img {
+    width: 50%;
+    align-self: center;
 }
 .contact{
     margin-top:30px;
@@ -86,7 +119,7 @@ nav a{
 }
 footer {
     background-color: white;
-    position: absolute;
+    position:relative;
     bottom: 0;
     left: 0;
     width: 100%;
