--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@ html, body{
     padding: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
 }
 header{
     width: 80%;
@@ -33,6 +36,7 @@ nav a{
     }
 }
 .home{
+    flex:1;
     width: 100%;
     height: 60%;
     margin-top: 30px;
@@ -55,6 +59,7 @@ nav a{
     }
 }
 .menu{
+    flex:1;
     background-image: url("../images/texture.jpg");
     background-size: cover;
     font-family: 'Fira Code', monospace;
@@ -89,6 +94,7 @@ nav a{
     align-self: center;
 }
 .contact{
+    flex:1;
     margin-top:30px;
     height: 70%;
     background-image: url("../images/texture.jpg");
@@ -119,7 +125,6 @@ nav a{
 }
 footer {
     background-color: white;
-    position:relative;
     bottom: 0;
     left: 0;
     width: 100%;
