--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,158 +1,154 @@
-html, body{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+header {
+  width: 80%;
+  margin: 15px auto 20px auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+}
+.logo {
+  width: 160px;
+  height: 105px;
+}
+nav a {
+  font-family: 'Rubik', sans-serif;
+  font-size: 32px;
+  font-weight: bold;
+  color: #000;
+  text-decoration: none;
+  margin-left: 75px;
+}
+@media screen and (max-width: 900px) {
+  nav a {
     display: flex;
-    min-height: 100vh;
     flex-direction: column;
+    font-size: 24px;
+    margin-left: 40px;
+  }
 }
-header{
-    width: 80%;
-    height: 130px;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: end;
+.home {
+  flex: 1;
+  background-image: url('../images/texture.jpg');
+  background-size: cover;
+  padding: 40px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.logo{
-    width:160px;
-    height: 105px;
+.home p {
+  font-family: 'Fira Code', monospace;
+  font-size: 64px;
+  width: 70%;
 }
-nav a{
-    font-family: "Rubik", sans-serif;
-    font-size:32px;
-    font-weight: bold;
-    color: #000;
-    text-decoration: none;
-    margin-left: 75px;
+@media screen and (max-width: 900px) {
+  .home p {
+    font-size: 48px;
+    width: 90%;
+  }
 }
-@media screen and (max-width:900px){
-    nav a{
-        display: flex;
-        flex-direction: column;
-        font-size: 24px;
-    }
+.menu {
+  flex: 1;
+  background-image: url('../images/texture.jpg');
+  background-size: cover;
+  font-family: 'Fira Code', monospace;
 }
-.home{
-    flex:1;
-    width: 100%;
-    height: 60%;
-    margin-top: 30px;
-    background-image: url("../images/texture.jpg");
-    background-size: cover;
-    padding: 40px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.home p{
-    font-family:"Fira Code", monospace;
-    font-size: 64px;
-    width: 70%;
-}
-@media screen and (max-width:900px){
-    .home p{
-        font-size:48px;
-        width: 90%;
-    }
-}
-.menu{
-    flex:1;
-    background-image: url("../images/texture.jpg");
-    background-size: cover;
-    font-family: 'Fira Code', monospace;
-}
-.menu h2, h1 {
-    font-weight: 400;
+.menu h2,
+h1 {
+  font-weight: 400;
 }
 .menu h1 {
-    margin: 0 auto;
-    padding-top: 40px;
-    text-align: center;
+  margin: 0 auto;
+  padding-top: 40px;
+  text-align: center;
 }
-.card-wrapper{
-    margin: 0 auto;
-    padding: 40px 20px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
+.card-wrapper {
+  margin: 0 auto;
+  padding: 40px 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
 }
-.recipe-card{
-    padding: 20px;
-    width: 350px;
-    height: 350px;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #FDFF8A;
-    box-shadow: 4px 8px 4px #00000040;
+.recipe-card {
+  padding: 20px;
+  width: 350px;
+  height: 350px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: #fdff8a;
+  box-shadow: 4px 8px 4px #00000040;
 }
 .recipe-card img {
-    width: 50%;
-    align-self: center;
+  width: 50%;
+  align-self: center;
 }
-.contact{
-    flex:1;
-    margin-top:30px;
-    height: 70%;
-    background-image: url("../images/texture.jpg");
-    background-size: cover;
-    padding: 0 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.contact {
+  flex: 1;
+  background-image: url('../images/texture.jpg');
+  background-size: cover;
+  padding: 0 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.contact img{
-    width: 400px;
-    margin-bottom: 20px;
+.contact img {
+  width: 400px;
+  margin-bottom: 20px;
 }
-.contact p{
-    font-family: 'Fira Code', monospace;
-    font-size: 1rem;
-    margin: 0;
+.contact p {
+  font-family: 'Fira Code', monospace;
+  font-size: 1rem;
+  margin: 0;
 }
-@media screen and (max-width:900px){
-    .contact{
-        align-items: center;
-        padding: 0;
-        text-align: right;
-    }
-    .contact img{
-        width: 300px;
-    }
+@media screen and (max-width: 900px) {
+  .contact {
+    align-items: center;
+    padding: 0;
+    text-align: right;
+  }
+  .contact img {
+    width: 300px;
+  }
 }
 footer {
-    background-color: white;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    box-sizing: border-box;
-    padding: 0 20px;
-    font-family: "Rubik", sans-serif;
-    font-size: max(15px, 2vmin);
+  background-color: white;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 0 20px;
+  font-family: 'Rubik', sans-serif;
+  font-size: max(15px, 2vmin);
 }
 footer div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
-.footer-contact{
-    padding: 10px;
-    min-width: 200px;
+.footer-contact {
+  padding: 10px;
+  min-width: 200px;
 }
 footer p {
-    margin: 0;
+  margin: 0;
 }
-.footer-links{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 footer a {
-    padding: 10px ;
+  padding: 10px;
 }
