--- a/styles/styles.css
+++ b/styles/styles.css
@@ -104,18 +104,6 @@ h1 {
   width: 50%;
   align-self: center;
 }
-/* .recipe-card:nth-of-type(1) {
-  transform: rotate(-7deg);
-}
-.recipe-card:nth-of-type(2) {
-  transform: rotate(7deg);
-}
-.recipe-card:nth-of-type(3) {
-  transform: rotate(3deg);
-}
-.recipe-card:nth-of-type(4) {
-  transform: rotate(-7deg);
-} */
 
 /* ----------------- Contact Page ----------------- */
 
@@ -182,4 +170,7 @@ footer p {
 }
 footer a {
   padding: 10px;
+}
+footer img {
+  height: max(max(2vw, 3vh), 30px);
 }
