--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,10 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
+h2,
+h1 {
+  font-weight: 400;
+}
 
 /* ----------------- Header ----------------- */
 
@@ -72,10 +76,7 @@ nav a {
   background-size: cover;
   font-family: 'Fira Code', monospace;
 }
-.menu h2,
-h1 {
-  font-weight: 400;
-}
+
 .menu h1 {
   margin: 0 auto;
   padding-top: 40px;
@@ -121,29 +122,69 @@ h1 {
   flex: 1;
   background-image: url('../images/texture.jpg');
   background-size: cover;
-  padding: 40px 40%;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  justify-content: center;
+  padding: 0px 10px;
+  font-family: 'Fira Code', monospace;
+}
+.contact h1,
+h2 {
+  margin: 0 auto;
+  padding: 40px 0px;
+  text-align: center;
 }
 .contact img {
-  width: 400px;
-  margin-bottom: 20px;
+  width: 100%;
+  max-width: 700px;
+}
+.contact-infos {
+  padding: 20px 0px;
 }
 .contact p {
-  font-family: 'Fira Code', monospace;
   font-size: 1rem;
   margin: 0;
+  text-align: left;
 }
-@media screen and (max-width: 900px) {
-  .contact {
-    align-items: center;
-    padding: 0;
-    text-align: right;
-  }
-  .contact img {
-    width: 300px;
-  }
+
+/* Contact Form */
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  /* flex-wrap: wrap; */
+}
+.input-wrapper {
+  padding: 10px 0px;
+  flex: 40%;
+  width: 100%;
+}
+.contact-form:nth-last-of-type('div') {
+  flex: 1;
+}
+.contact-form input {
+  background-color: #fdff8a;
+  border: none;
+  box-shadow: 4px 8px 4px #00000040;
+  width: 150px;
+  height: 100px;
+}
+
+.contact-form textarea {
+  background-color: #fdff8a;
+  border: none;
+  box-shadow: 4px 8px 4px #00000040;
+  width: 250px;
+  height: 200px;
+}
+.contact button {
+  margin: 40px 0px;
+  align-self: center;
+  padding: 20px 60px;
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 4px 8px 4px #00000040;
 }
 
 /* ----------------- Footer ----------------- */
