--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,41 +150,57 @@ h2 {
 /* Contact Form */
 
 .contact-form {
+  width: min(100%, 700px);
   display: flex;
-  flex-direction: column;
-  /* flex-wrap: wrap; */
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-.input-wrapper {
-  padding: 10px 0px;
-  flex: 40%;
-  width: 100%;
-}
-.contact-form:nth-last-of-type('div') {
-  flex: 1;
-}
-.contact-form input {
+.form-card {
+  padding: 30px 20px;
+  margin: 20px 50px;
   background-color: #fdff8a;
   border: none;
   box-shadow: 4px 8px 4px #00000040;
-  width: 150px;
   height: 100px;
+  width: 150px;
+  flex: 30%;
+  display: flex;
+  flex-direction: column;
+}
+#form-message {
+  height: 200px;
+  width: 250px;
+}
+.contact-form input {
+  margin-top: 10px;
+  height: 50px;
+  background-color: #fdff8a;
+  border: 2px dashed #00000040;
 }
 
 .contact-form textarea {
-  background-color: #fdff8a;
-  border: none;
-  box-shadow: 4px 8px 4px #00000040;
-  width: 250px;
   height: 200px;
+  margin: 10px;
+  background-color: #fdff8a;
+  border: 2px dashed #00000040;
 }
 .contact button {
-  margin: 40px 0px;
+  margin: 20px 0px;
   align-self: center;
-  padding: 20px 60px;
+  padding: 10px 20px;
   background-color: white;
   border: none;
   border-radius: 5px;
   box-shadow: 4px 8px 4px #00000040;
+  cursor: pointer;
+  font-family: 'Fira Code', monospace;
+  font-size: 1em;
+}
+.button-holder {
+  flex: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 /* ----------------- Footer ----------------- */
