--- a/styles/styles.css
+++ b/styles/styles.css
@@ -80,7 +80,7 @@ nav a {
 
 .menu h1 {
   margin: 0 auto;
-  padding:100px 0 60px 0;
+  padding: 100px 0 60px 0;
   text-align: center;
   font-size: 2.5rem;
   font-weight: bold;
@@ -92,6 +92,31 @@ nav a {
   justify-content: center;
   flex-wrap: wrap;
   gap: 40px;
+}
+#select-filter-form {
+  text-align: center;
+}
+select {
+  padding: 10px;
+  font-family: 'Fira Code', monospace;
+  font-size: 1.1em;
+}
+option {
+  font-size: 1.1em;
+  font-weight: 400;
+  padding: 10px;
+}
+option:hover {
+  background-color: white;
+}
+.yellow-option {
+  background-color: #fdff8a;
+}
+.purple-option {
+  background-color: #cd82fc;
+}
+.blue-option {
+  background-color: #5eacf5;
 }
 
 /* Recipes cards */
@@ -105,25 +130,25 @@ nav a {
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
-  margin:10px 0;
+  margin: 10px 0;
 }
 .recipe-card img {
   width: 50%;
   align-self: center;
 }
 
-.recipe-card h2{
-  margin:0;
+.recipe-card h2 {
+  margin: 0;
   padding-bottom: 10px;
   font-family: 'Rubik', sans-serif;
   font-weight: bold;
 }
 
-.recipe-card p{
+.recipe-card p {
   margin: 0;
 }
 
-.recipe-card a{
+.recipe-card a {
   position: relative;
   font-family: 'Fira Code', monospace;
   text-decoration: none;
@@ -131,11 +156,14 @@ nav a {
   font-size: 0.8rem;
 }
 
-#id-3, #id-6, #id-7{
+#id-3,
+#id-6,
+#id-7 {
   background-color: #cd82fc;
 }
 
-#id-4, #id-8{
+#id-4,
+#id-8 {
   background-color: #5eacf5;
 }
 /* Recipe details */
@@ -143,20 +171,20 @@ nav a {
   display: flex;
   flex-direction: column;
 }
-.recipe-wrapper h1{
-  padding:75px 0;
+.recipe-wrapper h1 {
+  padding: 75px 0;
 }
 .recipe-wrapper img {
   width: 90%;
 }
-.recipe-wrapper div{
+.recipe-wrapper div {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   margin: 0 150px;
 }
-.recipe-wrapper div img{
-  grid-row: 1/span3;
+.recipe-wrapper div img {
+  grid-row: 1 / span3;
 }
 
 /* ----------------- Contact Page ----------------- */
