--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,12 +75,12 @@ nav a {
   background-image: url('../images/texture.jpg');
   background-size: cover;
   font-family: 'Fira Code', monospace;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 
-.menu h1 {
+.menu h1{
   margin: 0 auto;
-  padding:100px 0 60px 0;
+  padding-bottom:60px;
   text-align: center;
   font-size: 2.5rem;
   font-weight: bold;
@@ -107,6 +107,7 @@ nav a {
   box-shadow: 4px 8px 4px #00000040;
   margin:10px 0;
 }
+
 .recipe-card img {
   width: 50%;
   align-self: center;
@@ -124,39 +125,91 @@ nav a {
 }
 
 .recipe-card a{
-  position: relative;
   font-family: 'Fira Code', monospace;
+  padding: 5px;
   text-decoration: none;
   color: #000;
   font-size: 0.8rem;
+  background-color: #5eacf593;
+  width: fit-content;
+  margin: auto;
+  border-radius: 80% 20% 72% 28% / 20% 63% 37% 80% ;
 }
 
 #id-3, #id-6, #id-7{
   background-color: #cd82fc;
 }
 
+#id-3 a, #id-6 a, #id-7 a{
+  background-color: #fdff8a9d;
+  border-radius: 80% 20% 81% 19% / 20% 25% 75% 80% ;
+}
+
 #id-4, #id-8{
   background-color: #5eacf5;
+}
+
+#id-4 a, #id-8 a{
+  background-color: #cd82fca6;
+  border-radius: 80% 20% 81% 19% / 9% 87% 13% 91% ;
 }
 /* Recipe details */
 .recipe-wrapper {
   display: flex;
   flex-direction: column;
 }
-.recipe-wrapper h1{
-  padding:75px 0;
-}
-.recipe-wrapper img {
-  width: 90%;
-}
 .recipe-wrapper div{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 2fr 2fr 1fr 1fr;
   margin: 0 150px;
+  column-gap:20px;
 }
-.recipe-wrapper div img{
-  grid-row: 1/span3;
+.recipe-wrapper h1{
+  grid-column-start: 2;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+  font-size: 2rem;
+}
+.recipe-wrapper img {
+  width: 50%;
+  min-width: 300px;
+  justify-self: end;
+  grid-row: 1/span4;
+}
+.recipe-wrapper p{
+  padding: 0;
+  margin: 0;
+}
+.recipe-wrapper a{
+  font-family: 'Fira Code', monospace;
+  text-decoration: none;
+  color: #000;
+  background-color: #fdff8a;
+  width: fit-content;
+  height: fit-content;
+  align-self: end;
+  border-radius: 80% 20% 69% 31% / 32% 92% 8% 68%  ;
+}
+
+@media screen and (max-width:900px) {
+  .recipe-wrapper div{
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    margin: 20px auto;
+  }
+  .recipe-wrapper h1{
+    margin-bottom: 20px;
+  }
+  .recipe-wrapper p{
+    margin:10px 0;
+  }
+  .recipe-wrapper a{
+    margin-top: 10px;
+    align-self: start;
+  }
 }
 
 /* ----------------- Contact Page ----------------- */
