--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,6 +93,31 @@ nav a {
   flex-wrap: wrap;
   gap: 40px;
 }
+#select-filter-form {
+  text-align: center;
+}
+select {
+  padding: 10px;
+  font-family: 'Fira Code', monospace;
+  font-size: 1.1em;
+}
+option {
+  font-size: 1.1em;
+  font-weight: 400;
+  padding: 10px;
+}
+option:hover {
+  background-color: white;
+}
+.yellow-option {
+  background-color: #fdff8a;
+}
+.purple-option {
+  background-color: #cd82fc;
+}
+.blue-option {
+  background-color: #5eacf5;
+}
 
 /* Recipes cards */
 .recipe-card {
@@ -105,7 +130,7 @@ nav a {
   text-align: center;
   background-color: #fdff8a;
   box-shadow: 4px 8px 4px #00000040;
-  margin:10px 0;
+  margin: 10px 0;
 }
 
 .recipe-card img {
@@ -113,17 +138,16 @@ nav a {
   align-self: center;
 }
 
-.recipe-card h2{
-  margin:0;
+.recipe-card h2 {
+  margin: 0;
   padding-bottom: 10px;
   font-family: 'Rubik', sans-serif;
   font-weight: bold;
 }
 
-.recipe-card p{
+.recipe-card p {
   margin: 0;
 }
-
 .recipe-card a{
   font-family: 'Fira Code', monospace;
   padding: 5px;
@@ -136,15 +160,15 @@ nav a {
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80% ;
 }
 
-#id-3, #id-6, #id-7{
+#id-3,
+#id-6,
+#id-7 {
   background-color: #cd82fc;
 }
-
 #id-3 a, #id-6 a, #id-7 a{
   background-color: #fdff8a9d;
   border-radius: 80% 20% 81% 19% / 20% 25% 75% 80% ;
 }
-
 #id-4, #id-8{
   background-color: #5eacf5;
 }
@@ -192,7 +216,6 @@ nav a {
   align-self: end;
   border-radius: 80% 20% 69% 31% / 32% 92% 8% 68%  ;
 }
-
 @media screen and (max-width:900px) {
   .recipe-wrapper div{
     width: 300px;
