--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 /* ----------------- Global style ----------------- */
-
 html,
 body {
   margin: 0;
@@ -10,6 +9,26 @@ body {
   min-height: 100vh;
   flex-direction: column;
 }
+
+body{
+  scrollbar-width: 5px;
+	scrollbar-color: #000 #969696;
+}
+
+::-webkit-scrollbar-track {
+  background: #969696;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #0000009a;
+  border-radius:5em;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  background: transparent;
+}
+
 h2,
 h1 {
   font-weight: 400;
