--- a/styles/styles.css
+++ b/styles/styles.css
@@ -371,6 +371,61 @@ label p {
   display: flex;
   justify-content: center;
 }
+/* ----------------- Order page ----------------- */
+.order {
+  flex: 1;
+  background-image: url('../images/texture.jpg');
+  background-size: cover;
+  font-family: 'Fira Code', monospace;
+  padding: 100px 0;
+}
+
+.order h1 {
+  margin: 0 auto;
+  padding-bottom: 60px;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+.basket-wrapper {
+  margin: 0 auto;
+  padding: 40px 20px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 40px;
+}
+/* Order cards */
+.order-card {
+  padding: 10px;
+  width: 400px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  text-align: center;
+  background-color: #fdff8a;
+  box-shadow: 4px 8px 4px #00000040;
+  margin: 10px 0;
+}
+.order-card img {
+  height: 100px;
+  width: 100px;
+}
+.order-card p {
+  margin: 0;
+}
+.order-card a {
+  font-family: 'Fira Code', monospace;
+  padding: 5px;
+  text-decoration: none;
+  color: #000;
+  font-size: 1rem;
+  background-color: #5eacf593;
+  margin: auto;
+  border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
+}
 
 /* ----------------- Footer ----------------- */
 
