--- a/styles/styles.css
+++ b/styles/styles.css
@@ -148,20 +148,27 @@ nav ul li:hover a::after {
 #select-filter-form {
   text-align: center;
   width: fit-content;
-  margin: auto;
-  display: flex;
-  align-items: end;
-
+  margin: 30px auto;
+}
+label{
+  display:flex;
+  align-items:end;
 }
 select {
-  padding: 10px;
-  padding-bottom: 2px;
+  padding: 2px 10px;
   font-family: 'Fira Code', monospace;
   font-size: 1.1em;
   border:none;
   box-shadow: 10px 5px 5px #00000040;
   border-radius: 0%;
   background-color: #fff;
+  margin:0 20px;
+  font-weight: 600;
+  background-color: #b1b1b1;
+}
+select:hover{
+  outline: #000 solid 3px;
+  font-weight: 800;
 }
 option {
   font-size: 1.1em;
@@ -169,19 +176,15 @@ option {
   padding: 10px;
 }
 
-option:hover {
-  background-color: white;
+.yellow-option {
+  background: #fdff8a77;
 }
-
-/* .yellow-option:hover {
-  background-color: #fdff8a;
+.purple-option {
+  background-color: #cd82fc77;
 }
-.purple-option:hover {
-  background-color: #cd82fc;
+.blue-option {
+  background-color: #5eacf577;
 }
-.blue-option:hover {
-  background-color: #5eacf5;
-} */
 
 /* Recipes cards */
 .recipe-card {
