--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,11 @@ body {
   scrollbar-color: #000 #969696;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #0000009a #969696;
+}
+
 ::-webkit-scrollbar-track {
   background: #969696;
 }
@@ -147,28 +152,43 @@ nav ul li:hover a::after {
 }
 #select-filter-form {
   text-align: center;
+  width: fit-content;
+  margin: 30px auto;
+}
+label{
+  display:flex;
+  align-items:end;
 }
 select {
-  padding: 10px;
+  padding: 2px 10px;
   font-family: 'Fira Code', monospace;
   font-size: 1.1em;
+  border:none;
+  box-shadow: 10px 5px 5px #00000040;
+  border-radius: 0%;
+  background-color: #fff;
+  margin:0 20px;
+  font-weight: 600;
+  background-color: #b1b1b1;
+}
+select:hover{
+  outline: #000 solid 3px;
+  font-weight: 800;
 }
 option {
   font-size: 1.1em;
   font-weight: 400;
   padding: 10px;
 }
-option:hover {
-  background-color: white;
-}
+
 .yellow-option {
-  background-color: #fdff8a;
+  background: #fdff8a77;
 }
 .purple-option {
-  background-color: #cd82fc;
+  background-color: #cd82fc77;
 }
 .blue-option {
-  background-color: #5eacf5;
+  background-color: #5eacf577;
 }
 
 /* Recipes cards */
