--- a/styles/styles.css
+++ b/styles/styles.css
@@ -310,11 +310,15 @@ h2 {
 }
 .contact-infos a {
   margin: 0;
+  margin-bottom: 10px;
   text-decoration: none;
   color: #000;
+  background: linear-gradient(transparent 50%, #5eacf5 50%);
+  background-size: auto 175%;
+  transition: all 300ms ease-in;
 }
 .contact-infos a:hover {
-  color: #5eacf5;
+  background-position-y: 100%;
 }
 
 /* Contact Form */
@@ -411,22 +415,30 @@ footer a {
   margin: -4px;
   text-decoration: none;
   color: #000;
-  padding: 0px;
 }
-footer a:hover {
-  color: #5eacf5;
+.footer-contact__mail-tel a{
+  padding:0;
+  margin: 2px 0;
+  background: linear-gradient(transparent 50%, #5eacf5 50%);
+  background-size: auto 175%;
+  transition: all 300ms ease-in;
+  width: fit-content;
+}
+.footer-contact__mail-tel a:hover {
+  background-position-y: 100%;
 }
 .footer-links {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-footer img:hover{
-  transform: scale(1.1);
-}
 footer a {
   padding: 10px;
 }
 footer img {
   height: max(max(2vw, 3vh), 30px);
+  transition: all 200ms ease-in;
+}
+footer img:hover{
+  transform: scale(1.1);
 }
