--- a/styles/styles.css
+++ b/styles/styles.css
@@ -387,7 +387,7 @@ label p {
   font-size: 2.5rem;
   font-weight: bold;
 }
-.basket-wrapper {
+.orders-wrapper {
   margin: 0 auto;
   padding: 40px 20px;
   display: flex;
