--- a/styles/styles.css
+++ b/styles/styles.css
@@ -48,10 +48,15 @@ header {
   justify-content: space-between;
   align-items: baseline;
 }
-.logo {
+header img {
   width: 160px;
   height: 105px;
+  transition: all 300ms ease-in-out;
 }
+header img:hover{
+  transform: scale(0.8);
+}
+
 ul {
   list-style-type: none;
   display: flex;
@@ -59,35 +64,24 @@ ul {
 nav ul li a {
   font-family: 'Rubik', sans-serif;
   font-size: 32px;
+  padding: 5px;
   font-weight: bold;
   color: #000;
   text-decoration: none;
   margin-left: 75px;
-  display: block;
-  position: relative;
-  overflow: hidden;
+}
+.header-unactive{
+  background: linear-gradient(transparent 50%, #f7fc00 50%);
+  background-size: auto 200%;
+  transition: all 300ms ease-in-out;
 }
 
-nav ul li a::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  transform: translatex(-100%);
-  border-bottom: 5px solid #000;
-  transition: all 300ms;
-  z-index: -1;
-  transform-origin: top left;
+.header-unactive:hover{
+  background-position-y: 100%;
 }
-nav ul li:hover a::after {
-  transform: translatex(0);
-}
+
 .header-active {
-  text-decoration: underline;
-  text-decoration-thickness: 5px;
-  font-weight: 800;
+  background: #f7fc00;
 }
 
 @media screen and (max-width: 900px) {
@@ -230,6 +224,14 @@ option {
   width: fit-content;
   margin: auto;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
+  transition: transform 200ms ease-in,
+              filter 100ms ease-in-out,
+              font-weight 300ms ease-in-out;
+}
+.recipe-card a:hover{
+  transform: translateX(5px);
+  font-weight: 600;
+  filter: contrast(200%);
 }
 
 /* Recipe details */
@@ -270,6 +272,14 @@ option {
   height: fit-content;
   align-self: end;
   border-radius: 80% 20% 69% 31% / 32% 92% 8% 68%;
+  transition: transform 200ms ease-in,
+              filter 100ms ease-in-out,
+              font-weight 300ms ease-in-out;
+}
+.recipe-wrapper a:hover{
+  transform: translateX(-5px);
+  font-weight: 600;
+  filter: contrast(200%);
 }
 @media screen and (max-width: 900px) {
   .recipe-wrapper div {
@@ -322,11 +332,15 @@ h2 {
 }
 .contact-infos a {
   margin: 0;
+  margin-bottom: 10px;
   text-decoration: none;
   color: #000;
+  background: linear-gradient(transparent 50%, #5eacf5 50%);
+  background-size: auto 175%;
+  transition: all 300ms ease-in;
 }
 .contact-infos a:hover {
-  color: #5eacf5;
+  background-position-y: 100%;
 }
 
 /* Contact Form */
@@ -378,13 +392,22 @@ label p {
   margin: 20px 0px;
   align-self: center;
   padding: 10px 20px;
-  background-color: white;
   border: none;
   border-radius: 5px;
   box-shadow: 4px 8px 4px #00000040;
   cursor: pointer;
   font-family: 'Fira Code', monospace;
   font-size: 1em;
+  background: linear-gradient(to right, #fdff8a 5%, #fff 0% 100%);
+  background-size: 100%;
+  transition: background-size 500ms ease-in-out,
+              transform 300ms ease-in,
+              box-shadow 300ms ease-in;
+}
+.contact button:hover{
+  background-size: 2000%;
+  transform: translate(-5px, -5px);
+  box-shadow: 9px 13px 9px #00000040;
 }
 .button-holder {
   flex: 100%;
@@ -478,10 +501,17 @@ footer a {
   margin: -4px;
   text-decoration: none;
   color: #000;
-  padding: 0px;
 }
-footer a:hover {
-  color: #5eacf5;
+.footer-contact__mail-tel a{
+  padding:0;
+  margin: 2px 0;
+  background: linear-gradient(transparent 50%, #5eacf5 50%);
+  background-size: auto 175%;
+  transition: all 300ms ease-in;
+  width: fit-content;
+}
+.footer-contact__mail-tel a:hover {
+  background-position-y: 100%;
 }
 .footer-links {
   display: flex;
@@ -493,4 +523,8 @@ footer a {
 }
 footer img {
   height: max(max(2vw, 3vh), 30px);
+  transition: all 200ms ease-in;
+}
+footer img:hover{
+  transform: scale(0.8);
 }
