--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,38 +45,42 @@ header {
   width: 80%;
   margin: 15px auto 20px auto;
   display: flex;
-  justify-content: space-between;
   align-items: baseline;
+}
+.logo-link {
+  display: flex;
 }
 header img {
   width: 160px;
   height: 105px;
   transition: all 300ms ease-in-out;
 }
-header img:hover{
+header img:hover {
   transform: scale(0.8);
 }
-
+header nav {
+  flex: 1;
+}
 ul {
   list-style-type: none;
   display: flex;
+  justify-content: end;
 }
 nav ul li a {
   font-family: 'Rubik', sans-serif;
   font-size: 32px;
-  padding: 5px;
+  margin: 5px 20px;
   font-weight: bold;
   color: #000;
   text-decoration: none;
-  margin-left: 75px;
 }
-.header-unactive{
+.header-unactive {
   background: linear-gradient(transparent 50%, #f7fc00 50%);
   background-size: auto 200%;
   transition: all 300ms ease-in-out;
 }
 
-.header-unactive:hover{
+.header-unactive:hover {
   background-position-y: 100%;
 }
 
@@ -87,12 +91,17 @@ nav ul li a {
 @media screen and (max-width: 900px) {
   header {
     align-items: center;
+    margin: 0px auto;
   }
   nav ul {
-    display: flex;
+    flex-direction: column;
+  }
+  nav ul li a {
     flex-direction: column;
     font-size: 24px;
-    margin-left: 40px;
+  }
+  .logo-link {
+    width: 110px;
   }
 }
 
@@ -149,23 +158,23 @@ nav ul li a {
   width: fit-content;
   margin: 30px auto;
 }
-label{
-  display:flex;
-  align-items:end;
+label {
+  display: flex;
+  align-items: end;
 }
 select {
   padding: 2px 10px;
   font-family: 'Fira Code', monospace;
   font-size: 1.1em;
-  border:none;
+  border: none;
   box-shadow: 10px 5px 5px #00000040;
   border-radius: 0%;
   background-color: #fff;
-  margin:0 20px;
+  margin: 0 20px;
   font-weight: 600;
   background-color: #b1b1b1;
 }
-select:hover{
+select:hover {
   outline: #000 solid 3px;
   font-weight: 800;
 }
@@ -224,11 +233,10 @@ option {
   width: fit-content;
   margin: auto;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
-  transition: transform 200ms ease-in,
-              filter 100ms ease-in-out,
-              font-weight 300ms ease-in-out;
+  transition: transform 200ms ease-in, filter 100ms ease-in-out,
+    font-weight 300ms ease-in-out;
 }
-.recipe-card a:hover{
+.recipe-card a:hover {
   transform: translateX(5px);
   font-weight: 600;
   filter: contrast(200%);
@@ -272,11 +280,10 @@ option {
   height: fit-content;
   align-self: end;
   border-radius: 80% 20% 69% 31% / 32% 92% 8% 68%;
-  transition: transform 200ms ease-in,
-              filter 100ms ease-in-out,
-              font-weight 300ms ease-in-out;
+  transition: transform 200ms ease-in, filter 100ms ease-in-out,
+    font-weight 300ms ease-in-out;
 }
-.recipe-wrapper a:hover{
+.recipe-wrapper a:hover {
   transform: translateX(-5px);
   font-weight: 600;
   filter: contrast(200%);
@@ -400,11 +407,10 @@ label p {
   font-size: 1em;
   background: linear-gradient(to right, #fdff8a 5%, #fff 0% 100%);
   background-size: 100%;
-  transition: background-size 500ms ease-in-out,
-              transform 300ms ease-in,
-              box-shadow 300ms ease-in;
+  transition: background-size 500ms ease-in-out, transform 300ms ease-in,
+    box-shadow 300ms ease-in;
 }
-.contact button:hover{
+.contact button:hover {
   background-size: 2000%;
   transform: translate(-5px, -5px);
   box-shadow: 9px 13px 9px #00000040;
@@ -502,8 +508,8 @@ footer a {
   text-decoration: none;
   color: #000;
 }
-.footer-contact__mail-tel a{
-  padding:0;
+.footer-contact__mail-tel a {
+  padding: 0;
   margin: 2px 0;
   background: linear-gradient(transparent 50%, #5eacf5 50%);
   background-size: auto 175%;
@@ -525,6 +531,6 @@ footer img {
   height: max(max(2vw, 3vh), 30px);
   transition: all 200ms ease-in;
 }
-footer img:hover{
+footer img:hover {
   transform: scale(0.8);
 }
