--- a/styles/styles.css
+++ b/styles/styles.css
@@ -483,6 +483,9 @@ label p {
   box-shadow: 4px 8px 4px #00000040;
   margin: 10px 0;
 }
+.order-card img {
+  width: 50px;
+}
 .order-card p {
   margin: 0;
   text-align: left;
@@ -495,11 +498,11 @@ label p {
   background-color: #5eacf593;
   border-radius: 80% 20% 72% 28% / 20% 63% 37% 80%;
 }
-.order-card__recipe{
+.order-card__recipe {
   display: flex;
   align-items: start;
 }
-.order-card__recipe-title-price{
+.order-card__recipe-title-price {
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -509,7 +512,7 @@ label p {
 .order-card__recipe img {
   width: 100px;
   height: 100px;
-  order:-1;
+  order: -1;
 }
 
 /* ----------------- Footer ----------------- */
